2010-07-09 Patrick Galbraith <patg@patg.net> (4.015)
* BUG #56664 fixed t/40blobs.t skip_all logic (W. Phillip Moore)
* BUG #57253 Fixed iteration past end of string (crash). (Chris Butler)
* Added a new parameter for old behavior- mysql_bind_comment_placeholders which 
  will make it possible to have placeholders bound for those who really 
  want that behavior.
* Fixed bind_type_guessing - always on now 

2010-04-14 Patrick Galbraith <patg@patg.net> (4.014)
* BUG #30033 Fixed handling of comments to allow comments that contain characters
  that might otherwise cause placeholder detection to not work properly
* BUG #53844, Fix for memory leak in stats. (Gregory Burmistrov)
* BUG #49719, Fix for handling of NULLs in prepared statements (Gert Pache)
* BUG #55627, Fix for testing failure due to strict mode (Yves) 
* BUG #51784, Fix for mysqladmin on Windows in Makefile (Zeeshan Muhammad)
* BUG #41630, Typo in Makefile
* Had to define true and false in dbdimp.h. Didn't work out of the box on Linux

2009-09-16 Patrick Galbraith <patg@patg.net> (4.013)

* #49484: PATCH add support for MYSQL_INIT_COMMAND - Peter John Edwards 
* #48242: 'mysql_bind_type_guessing' doesn't work correctly
with minus sign - Thanks Serguei Trouchelle!
* #45616: t/40blobs.t cannot pass without database access - 
ServerError() not declared - Thanks ysth http://ysth.livejournal.com/

2009-06-18 Patrick Galbraith <patg@patg.net> (4.012)

* Patch to bind_type_guessing from Craigslist, 
  Thanks to Chris! Happiness is no quoted numbers. 
  Fixed ChopBlanks to work with bind_type_guessing
* Patch for win32 strawberry build 
  Thanks to Curtis Jewell! Windows needs love
* Patch for auto-reconnect to set active flag
  Thanks to Doug Fischer!
* Fixed bug 32464 http://bugs.mysql.com/bug.php?id=32464.
  See https://rt.cpan.org/Ticket/Display.html?id=46308
  Add connection flag mysql_no_autocommit_cmd which users of
  MySQL Proxy can use to prevent 'set autocommit=#' from being